[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = "abort"
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
postgres = "0.19.4"
sqlite = "0.30.3"
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
custom_error = "1.9.2"
lazy_static = "1.4.0"
tokio = "1.23.0"